refactor(api): deprecate MAS components
